# plotdraw

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/emscripten/: shell.html
app/src/: app.cpp  app.h  grid.cpp  grid.h  main.cpp  polygon.cpp  polygon.h  polygon_observer.h  property.cpp  property.h  toolbox.cpp  toolbox.h  types.h  vertex_label.cpp  vertex_label.h
app/src/tools/: grid_tool.cpp  grid_tool.h  load_tool.cpp  load_tool.h  plot_tool.cpp  plot_tool.h  save_tool.cpp  save_tool.h  select_tool.cpp  select_tool.h  tool.h
app/src/utils/: clipboard.cpp  clipboard.h
cmake/: imgui_CMakeLists.txt
docs/: PLAN.md
tests/: CMakeLists.txt  grid_stubs.cpp  test_actions.cpp  test_gestures.cpp  test_labels.cpp  test_observer.cpp  test_polygon.cpp
tests/shim/: imgui.h
